# ui-auto-test

./: .gitignore  Dockerfile  LINUX_DEPLOY.md  README.txt  admin  admin.txt  git_test.py  new_py.py  pyproject.toml  pyrightconfig.json  pytest.ini  report.html  requirements.txt  setup.cfg  testcase_result.py  view_report.sh  view_report_http.py  无外网环境部署说明.md  查看报告说明.md
5_2_login/: __init__.py  test_login.py
UIreport/: 30849ba4-8ef3-457e-a460-377750869da3-result.json  5ede03cd-4788-4769-ad97-a8014bf2e7ee-container.json  9b383ba2-2ad9-4c6f-a2a3-94b5b57d74c0-attachment.txt
base/: AccountBase.py  BasePage.py  GoodsBase.py  HomeBase.py  IframeBaiduMapBase.py  LeftMenuBase.py  LoginBase.py  ObjectMap.py  OrderBase.py  TopMenuBase.py  base_page.py  base_util.py
common/: __init__.py  ding_talk.py  find_img.py  mysql_operate.py  ocr_identify.py  process_file.py  process_redis.py  redis_operation.py  report_add_img.py  tools.py  yaml_config.py
config/: __init__.py  driver_config.py  environment.yaml
logs/: __init__.py  failed_testcases.json  log.py  test_process.json
page/: AccountPage.py  ExternalLinkPage.py  GoodsPage.py  HomePage.py  IframeBaiduMapPage.py  LeftMenuPage.py  LoginPage.py  OrderPage.py  TopMenuPage.py  exam_list.py  exam_list_copy.py  login_page.py  problems_list.py  teacher_class.py
testcases/: TestOrderBuy.py  conftest.py  test_999_delete_data.py  test_add_goods.py  test_assert.py  test_exam_list.py  test_login.py  test_login_img_assert.py  test_mysql_conn.py  test_problem_list.py  test_rerun.py  test_switch_window_handle.py  test_teacher_class.py  (+2 more)
(+90 files in other folders)
